qmlmatrix (4.2.0-0) unstable; urgency=low

  * Don't show the cursor on top of the screensaver

 -- Team Kano <dev@kano.me>  Wed, 24 Oct 2018 16:21:00 +0100

qmlmatrix (4.0.0-0) unstable; urgency=low

  * Update dependencies for Stretch
  * Use hardware acceleration for rendering
  * Increase frame-rate to 40 fps.

 -- Team Kano <dev@kano.me>  Mon, 18 Jun 2018 12:21:00 +0100

qmlmatrix (1.0-1) unstable; urgency=low

  * Added Initial version

 -- Team Kano <dev@kano.me>  Thu, 20 Jul 2017 10:21:00 +0100
