@@ -1,6 +1,11 @@
 /*
  *  main.qml
  *
+ *  Copyright (C) 2018 Kano Computing Ltd.
+ *  License: http://www.gnu.org/licenses/gpl-2.0.txt GNU GPLv2
+ *
+ * Main QML window
+ *
  */
 
 import QtQuick 2.3
