@@ -1,6 +1,9 @@
 /*
  *  main.cpp
  *
+ *  Copyright (C) 2018 Kano Computing Ltd.
+ *  License: http://www.gnu.org/licenses/gpl-2.0.txt GNU GPLv2
+ *
  *  Main entry point into the Matrix app
  */
 
